[gd_scene load_steps=15 format=3 uid="uid://b2dd4iocx3lmn"]

[ext_resource type="Script" path="res://main.gd" id="1_1lkn4"]
[ext_resource type="Script" path="res://ball.gd" id="2_d77f6"]
[ext_resource type="Script" path="res://goal.gd" id="3_mhurr"]
[ext_resource type="Texture2D" uid="uid://b56rg1543adcb" path="res://ball.png" id="3_vuuju"]
[ext_resource type="Texture2D" uid="uid://bdcgcebv6r31e" path="res://paddle.png" id="5_f0d6y"]
[ext_resource type="Script" path="res://player_paddle.gd" id="5_rhj0r"]
[ext_resource type="Script" path="res://cpu_paddle.gd" id="7_gwr7u"]
[ext_resource type="Script" path="res://debug_mode.gd" id="8_6dmse"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ygvfx"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_frv2m"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yia7m"]
size = Vector2(800, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7jao"]
size = Vector2(800, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i74vd"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxegs"]
size = Vector2(20, 150)

[node name="Main" type="Node2D"]
position = Vector2(399, 301)
script = ExtResource("1_1lkn4")

[node name="Ball" type="RigidBody2D" parent="."]
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_ygvfx")
gravity_scale = 0.0
linear_damp_mode = 1
script = ExtResource("2_d77f6")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(0.911, 0.911)
texture = ExtResource("3_vuuju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_frv2m")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, -297.5)
shape = SubResource("RectangleShape2D_yia7m")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 297.5)
shape = SubResource("RectangleShape2D_s7jao")

[node name="LeftGoal" type="Area2D" parent="."]
script = ExtResource("3_mhurr")
main_node = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(-410, 0)
shape = SubResource("RectangleShape2D_i74vd")

[node name="RightGoal" type="Area2D" parent="."]
script = ExtResource("3_mhurr")
main_node = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(410, 0)
shape = SubResource("RectangleShape2D_i74vd")

[node name="PlayerPaddle" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("5_rhj0r")

[node name="Collision" type="CollisionShape2D" parent="PlayerPaddle"]
position = Vector2(-380, 0)
shape = SubResource("RectangleShape2D_mxegs")

[node name="Sprite2D" type="Sprite2D" parent="PlayerPaddle"]
position = Vector2(-380, 0)
rotation = 1.5708
scale = Vector2(0.580199, 0.297025)
texture = ExtResource("5_f0d6y")

[node name="CpuPaddle" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("7_gwr7u")
main_node = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="CpuPaddle"]
position = Vector2(380, 0)
shape = SubResource("RectangleShape2D_mxegs")

[node name="Sprite2D" type="Sprite2D" parent="CpuPaddle"]
position = Vector2(380, -0.109985)
rotation = -1.5708
scale = Vector2(0.580199, 0.297025)
texture = ExtResource("5_f0d6y")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -7.0
offset_top = -250.0
offset_right = 7.0
offset_bottom = -183.0
theme_override_font_sizes/font_size = 48
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScoreLabel" type="Label" parent="."]
offset_left = -97.0
offset_top = -250.0
offset_right = -17.0
offset_bottom = -183.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CpuScoreLabel" type="Label" parent="."]
offset_left = 17.0
offset_top = -250.0
offset_right = 97.0
offset_bottom = -183.0
theme_override_font_sizes/font_size = 48
text = "0"
vertical_alignment = 1

[node name="DebugMode" type="Node" parent="."]
script = ExtResource("8_6dmse")

[connection signal="body_entered" from="LeftGoal" to="LeftGoal" method="_on_body_entered"]
[connection signal="body_entered" from="RightGoal" to="LeftGoal" method="_on_right_goal_body_entered"]
